# VuVoPy

./: .gitignore  .readthedocs.yml  LICENSE.txt  README.md  pyproject.toml  pytest.ini  setup.py
docs/: VuVoPy.rst  VuVoPy.src.VuVoPy.data.containers.rst  VuVoPy.src.VuVoPy.data.utils.rst  VuVoPy.src.VuVoPy.features.rst  VuVoPy.src.VuVoPy.features.utils.rst  VuVoPy.src.data.containers.rst  VuVoPy.src.data.rst  VuVoPy.src.data.utils.rst  VuVoPy.src.features.rst  VuVoPy.src.features.utils.rst  VuVoPy.src.rst  conf.py  index.rst  src.data.rst  src.data.utils.rst  src.features.rst  src.features.utils.rst
docs/_build/doctrees/: VuVoPy.doctree  VuVoPy.src.VuVoPy.data.containers.doctree  VuVoPy.src.VuVoPy.data.doctree  VuVoPy.src.VuVoPy.data.utils.doctree  VuVoPy.src.VuVoPy.doctree  VuVoPy.src.VuVoPy.features.doctree  VuVoPy.src.VuVoPy.features.utils.doctree  VuVoPy.src.doctree  environment.pickle  index.doctree  (+1 more)
docs/source/: VuVoPy.data.containers.rst  VuVoPy.rst  conf.py  index.rst
example_scripts/: example.py  parcz_features.csv  statistic_eval_feature_ext.py  statistic_eval_ntbk.ipynb
src/VuVoPy/: __init__.py
src/VuVoPy.egg-info/: PKG-INFO  SOURCES.txt
src/docs/: src.data.containers.rst  src.features.utils.rst  src.rst
tests/: conftest.py  test_durmad.py  test_durmed.py  test_duv.py  test_formant_frequencies.py  test_fundamental_frequency.py  test_hnr.py  test_jitter.py  test_mpt.py  test_ppr.py  test_preprocessing.py  test_relf0sd.py  test_relf1f2sd.py  test_relseosd.py  test_sample.py  test_segmentation.py  test_shimmer.py  test_spir.py  test_vuvs_detection.py
(+124 files in other folders)
